--- a/Mészáros Levente/css/gyak.css
+++ b/Mészáros Levente/css/gyak.css
@@ -1,3 +1,12 @@
-body {
-    background-color: rgba(0,0,0,5);
+ 
+ @import url('https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap');
+ 
+ body {
+      background: url(../pics/bg-body.gif)repeat fixed;
+      color: rgb(192, 169, 152);
+      font-size: 24px;
+      font-style: bold;
+      line-height: 36px;
+      font-family: 'Roboto', sans-serif; 
+
 }
