félkész érettségi feladat

--- a/Dunai Krisztián/html/css/gyak.css
+++ b/Dunai Krisztián/html/css/gyak.css
@@ -1,5 +1,6 @@
 body
 {
-    background-color: rgba(0,0,0,0.5); 
-
+    background-image: url("../pics/bg-body.gif");
+    background-repeat: repeat;
+    background-position: contain;
 }
