--- a/Gábor Dávid/Sajat weboldal/style.css
+++ b/Gábor Dávid/Sajat weboldal/style.css
@@ -13,7 +13,7 @@ body {
     float: left;
     color: #f2f2f2;
     text-align: center;
-    padding: 14px 16px;
+    padding: 20px 20px;
     text-decoration: none;
     font-size: 17px;
 }
@@ -60,4 +60,8 @@ a {
 
 a video {
     color: tomato;
+}
+
+div.link a {
+    color: orange;
 }
