--- a/Fuglovics Konor/css/boxmodell.css
+++ b/Fuglovics Konor/css/boxmodell.css
@@ -1,10 +1,12 @@
+@import url('https://fonts.googleapis.com/css2?family=Oswald&display=swap');
 * {
     box-sizing: border-box
 }
 body {
     background-image: url(../pics/bg-body.gif);
-    color: white;
-    margin: 0
+    color: #732d42;
+    margin: 0;
+    font-family: 'Oswald', Symbol
 }
 div {
     padding: 20px 0 20px 0;
@@ -21,4 +23,14 @@ div .header-image2 {
 }
 .box-content h2 {
     margin: 0;
+    color: #4382b4
+}
+.box-content2 h2 {
+    margin: 0;
+    color: #738e72
+}
+.details a {
+    display: block;
+    background-color: #feb127;
+    color: black
 }
