--- a/Mészáros Levente/css/boxmodel.css
+++ b/Mészáros Levente/css/boxmodel.css
@@ -1,22 +1,67 @@
-body {
-    background-image: url(../pics/bg-body.gif);
-    color: white;
-    margin: 0;
+@import url('https://fonts.googleapis.com/css2?family=Oswald:wght@400;700&family=Roboto:ital,wght@0,400;0,500;0,700;0,900;1,500;1,700&display=swap');
+* {
+    box-sizing: border-box;
 }
 
-div {
+body {
+    background-image: url("../pics/bg-body.gif");
+    color: white;
+    margin: 0;
+    font-family: 'Oswald', sans-serif;
+}
+
+.box {
     width: 90%;
-    padding: 20px 0px 20px 0px;
-    border-bottom: 10px solid green;
-    border-left: 10px dotted red;
-    border-right: 10px dashed white;
-    border-top: 10px ridge blue;
-    margin: auto;
+    padding: 20px 0 20px 0;
+    margin: 20px auto;
+    box-shadow: 0 0 30px black;
+}
+
+.box2 {
+    width: 90%;
+    padding: 20px 0 20px 0;
+    margin: 20px auto;
+}
+
+.box .header-image {
+    height: 200px;
+    background: url("../pics/image1.jpg") top center no-repeat;
+}
+
+.box2 .header-image {
+    height: 200px;
+    background-image: url("../pics/image2.jpg") 
+
+}
+
+.box .box-content {
+    padding: 20px;
+    color: #32859d
+}
+
+.box2 .box-content {
+    padding: 20px;
+    color: #32859d
+}
+
+.box .box-content h2 {
+    margin: 0;
+    color: #535353
     
 
 }
 
+.box2 .box-content h2 {
+    margin: 0;
+    color: #535353
+}
 
-*{ box-sizing: border-box;
-
-    }
+.details a {
+    display: inline-block;
+    background-color: #feb127;
+    color: black;
+    margin: 0;
+    padding: 5px 10px;
+    text-decoration:none;
+    
+}
