--- a/Balogh Ádám/css/boxmodel.css
+++ b/Balogh Ádám/css/boxmodel.css
@@ -1,12 +1,59 @@
-*{
+@import url('https://fonts.googleapis.com/css2?family=Oswald:wght@400;700&family=Roboto:ital,wght@0,400;0,500;0,700;0,900;1,500;1,700&display=swap');
+* {
     box-sizing: border-box;
 }
-body {
-    background-image: url("../pics/bg-body.gif");
-    color:white;
-}
-div{
-     width: 400px;
-     height: 400px;
 
+body {
+    background-image: url("../pics/back.png");
+    color: white;
+    margin: 0;
+    font-family: 'Oswald', sans-serif;
+}
+
+.box {
+    width: 55%;
+    padding: 20px 0 20px 0;
+    margin: 20px auto;
+}
+
+.box2 {
+    width: 80%;
+    padding: 20px 0 20px 0;
+    margin: 20px auto;
+}
+
+.box .header-image {
+    height: 400px;
+    background-image: url("../pics/banner2.jpg")
+}
+
+.box2 .header-image {
+    height: 330px;
+    background-image: url("../pics/batman.png")
+}
+
+.box .box-content {
+    padding: 20px;
+    color: white
+}
+
+.box2 .box-content {
+    padding: 20px;
+    color: white
+}
+
+.box .box-content h2 {
+    margin: 0;
+    color: #aa0202
+}
+
+.box2 .box-content h2 {
+    margin: 0;
+    color: #a50707
+}
+
+.details a {
+    display: block;
+    background-color: #272bfe;
+    color: black
 }
