--- a/Dunai Krisztián/Float/css/float.css
+++ b/Dunai Krisztián/Float/css/float.css
@@ -22,6 +22,25 @@ header{
 .wrapper{
     max-width: 1000px;
     margin: 0 auto;
-
 }
 
+.content{
+    background: #333030;
+}
+
+nav{
+    width: 25%;
+    float: left;
+}
+
+main{
+    width: 75%;
+    background-color: white;
+    float: right;
+}
+
+.content::after {
+    content: "";
+    clear: both;   
+    display: table;
+}
