--- a/Balogh Ádám/float/css/float.css
+++ b/Balogh Ádám/float/css/float.css
@@ -25,5 +25,25 @@ header{
     max-width: 1000px;
     margin: 0 auto;
 }
+.content{
+    background: #333030;
+}
+
+.content::after {
+    content: "";
+    clear: both;
+    display: table;
+  }
+  
+nav{
+    width: 25%;
+    float: left;
+}
+main{
+    width: 75%;
+    background-color: white;
+    float: right;
+}
+
 
 
