--- a/Tukarcs Alex/float/css/float.css
+++ b/Tukarcs Alex/float/css/float.css
@@ -1,23 +1,50 @@
 @import url('https://fonts.googleapis.com/css2?family=Raleway:wght@400;700&display=swap');
 
-*{
-    box-sizing: border-box;
-
+* {
+    box-sizing: border-box
 }
+
 body{
     margin: 0;
-    background: url('../pics/bg-body.jpg') fixed;
+    background-image: url(../pics/bg-body.jpg);
     font-family: 'Raleway', sans-serif;
+        
 }
+
 header{
-    background: url('../pics/bg-header.jpg');
+    background-image: url('../pics/bg-header.jpg');
     color: white;
     font-size: 80px;
     font-weight: 700;
     padding: 80px 60px;
-    text-shadow: 0 0 20px rgba(0, 0, 0, 8);
+    text-shadow: 0 0 20px rgba(0, 0, 0, .8);
+
 }
+
 .wrapper{
     max-width: 1000px;
     margin: 0 auto;
 }
+.content{
+    background: #333030;
+}
+
+.content::after {
+    content: "";
+    clear: both;
+    display: table;
+  }
+  
+nav{
+    width: 25%;
+    float: left;
+}
+main{
+    width: 75%;
+    background-color: white;
+    float: right;
+    padding: 30px;
+}
+
+
+
