--- a/Balogh Ádám/float/css/float.css
+++ b/Balogh Ádám/float/css/float.css
@@ -4,14 +4,14 @@
     box-sizing: border-box
 }
 
-body{
+body {
     margin: 0;
     background-image: url(../pics/bg-body.jpg);
     font-family: 'Raleway', sans-serif;
         
 }
 
-header{
+header {
     background-image: url('../pics/bg-header.jpg');
     color: white;
     font-size: 80px;
@@ -21,11 +21,11 @@ header{
 
 }
 
-.wrapper{
+.wrapper {
     max-width: 1000px;
     margin: 0 auto;
 }
-.content{
+.content {
     background: #333030;
 }
 
@@ -35,14 +35,47 @@ header{
     display: table;
   }
   
-nav{
+nav {
     width: 25%;
     float: left;
 }
-main{
+
+nav ul {
+    margin: 0;
+    padding: 30px 0;
+    list-style: none;
+    
+}
+
+nav ul li {
+    border-bottom: 1px dashed rgba(255,255,255,0.2)
+}
+
+nav a {
+    color:white;
+    text-decoration: none;
+    padding: 15px 0;
+    display: block
+}
+
+nav a:hover {
+    padding: 15px;
+    background: rgba(255,255,255,0.1)
+}
+
+main {
     width: 75%;
     background-color: white;
     float: right;
+    padding: 30px;
+}
+
+.float-right{
+    float: right;
+}
+
+.float-left{
+    float: left;
 }
 
 
