--- a/Tukarcs Alex/float/css/float.css
+++ b/Tukarcs Alex/float/css/float.css
@@ -1,31 +1,29 @@
 @import url('https://fonts.googleapis.com/css2?family=Raleway:wght@400;700&display=swap');
-
 * {
-    box-sizing: border-box
+    box-sizing: border-box;
 }
 
-body{
+body {
     margin: 0;
-    background-image: url(../pics/bg-body.jpg);
+    background: url('../pics/bg-body.jpg') fixed;
     font-family: 'Raleway', sans-serif;
-        
 }
 
-header{
-    background-image: url('../pics/bg-header.jpg');
+header {
+    background: url('../pics/bg-header.jpg');
     color: white;
     font-size: 80px;
     font-weight: 700;
     padding: 80px 60px;
-    text-shadow: 0 0 20px rgba(0, 0, 0, .8);
-
+    text-shadow: 0 0 20px rgba(0, 0, 0, .8)
 }
 
-.wrapper{
+.wrapper {
     max-width: 1000px;
     margin: 0 auto;
 }
-.content{
+
+.content {
     background: #333030;
 }
 
@@ -33,18 +31,53 @@ header{
     content: "";
     clear: both;
     display: table;
-  }
-  
-nav{
+}
+
+nav {
     width: 25%;
     float: left;
 }
-main{
+
+nav ul {
+    margin: 0;
+    padding: 30px 0;
+    list-style: none
+}
+
+nav ul li {
+    border-bottom: 1px dashed rgba(255, 255, 255, 0.4)
+}
+
+nav a {
+    color: white;
+    text-decoration: none;
+    padding: 15px 0;
+    display: block
+}
+
+nav a:hover {
+    padding: 15px;
+    background: rgba(255, 255, 255, 0.1)
+}
+
+main {
     width: 75%;
-    background-color: white;
-    float: right;
+    background: white;
+    float: left;
     padding: 30px;
 }
 
+.float-right {
+    float: right;
+}
 
+.float-left {
+    float: left;
+}
 
+h2 {
+font-size: 50px;
+margin-top: 0;
+color:white;
+background: #3d8a12;
+}
