--- a/Dunai Krisztián/Float/css/float.css
+++ b/Dunai Krisztián/Float/css/float.css
@@ -24,7 +24,7 @@ header {
 }
 
 .content {
-    backgound: #333030;
+    background: #333030;
 }
 
 .content::after {
@@ -67,10 +67,39 @@ main {
     padding: 30px;
 }
 
+main p{
+    line-height: 23px;
+}
+
 .float-right {
     float: right;
+    margin: 0 0 20px 20px;
 }
 
 .float-left {
     float: left;
+    margin: 0 20px 20px 0;
+}
+
+.right {
+    float: right;
+    margin: 0 20px 20px 0;
+}
+
+.left {
+    float: left;
+    margin: 0 20px 20px 0;
+}
+
+.content::after footer::after {
+    content: "";
+    clear: both;
+    display: table;
+}
+
+h2 {
+    font-size: 50px;
+    margin-top: 0;
+    color: white;
+    background: #3d8a12;
 }
