--- a/Balogh Ádám/floatnyers/css/style.css
+++ b/Balogh Ádám/floatnyers/css/style.css
@@ -53,3 +53,34 @@ main{
 main p{
     line-height: 1.5;
 }
+
+nav .has-submenu{
+    position: relative;
+
+}
+
+nav .has-submenu:hover .submenu{
+    display: block;
+}
+nav .has-submenu::after{
+    content: '►';
+    color: white;
+    position: absolute;
+}
+
+nav .submenu{
+    position: absolute;
+    width: 220px;
+    display: none;
+}
+
+nav .submenu a{
+    background: rgba(190, 0, 0, 0.1);
+    padding: 10px 20px;
+}
+
+nav .submenu a:hover{
+    background: black;
+    padding: 10px 20px;
+
+}
