--- a/Fuglovics Konor/position/css/style.css
+++ b/Fuglovics Konor/position/css/style.css
@@ -49,3 +49,26 @@ main {
 main p {
     line-height: 1.5;
 }
+nav .has-submenu {
+    position: relative
+}
+nav .has-submenu:hover .submenu {
+    display: block
+}
+nav .has-submenu::after {
+content: '';
+color: white;
+position: absolute
+}
+nav .submenu {
+    position: absolute;
+    width: 220px;
+    display: none
+}
+nav .submenu a {
+    background: rgba(190,0,0,.1);
+    padding: 10px 20px
+}
+nav .submenu a:hover {
+    background: black
+}
