--- a/Fekete Zoltán/position/css/style.css
+++ b/Fekete Zoltán/position/css/style.css
@@ -50,3 +50,26 @@ main{
 main p{
     line-height: 1.5;
 }
+nav .has-submenu{
+    position: relative;
+}
+nav .has-submenu:hover .submenu{
+    display: block;
+}
+nav .has-submenu::after{
+    content: '►';
+    color: white;
+    position: absolute;
+}
+nav .submenu{
+    position: absolute;
+    width: 220px;
+    display: none;
+}
+nav .submenu{
+    background: rgba(190, 0, 0, 0.1);
+    padding: 10px 20px;
+}
+nav .submenu a:hover {
+    background: black;
+}
