--- a/Dunai Krisztián/Float nyers/css/style.css
+++ b/Dunai Krisztián/Float nyers/css/style.css
@@ -159,3 +159,8 @@ main h1 {
     border-radius: 3px;
     cursor: pointer;
 }
+
+.cookie-accept button:hover {
+    background-color: red;
+    color: wheat;
+}
