--- a/Kis-Fodor Zsombor/css/style.css
+++ b/Kis-Fodor Zsombor/css/style.css
@@ -1,11 +1,91 @@
 @import url('https://fonts.googleapis.com/css?family=Raleway:400,700&display=swap');
 body {
     margin: 0;
-    background: url('../pics/bg-body.jpg') fixed;
+    background: url('../float/bg-body.jpg') fixed;
     background-size: cover;
     font-family: 'Raleway', sans-serif
 }
 
 * {
     box-sizing: border-box
+}
+
+.wrapper {
+    max-width: 800px;
+    margin: 40px auto;
+}
+
+header{
+    background: url('../pics/bg-header.jpg') no-repeat;
+    height: 360px;
+
+}  
+
+nav{
+    background: rgba(150, 0, 0, 0.8);
+}
+
+nav a{
+    color: white;
+    text-decoration: none;
+    padding: 20px;
+    display: block;
+}
+
+nav a:hover{
+    background: rgba(0, 0, 0, .8);
+}
+
+nav::after{
+    content: '';
+    clear: both;
+    display: table;
+}
+
+nav ul{
+    list-style: none;
+    padding: 0; 
+    margin: 0;
+}
+
+nav ul li{
+    float: left;
+}
+
+main{
+    background: white;
+    padding: 40px;
+}
+
+main p{
+    line-height: 1.5;
+}
+
+nav .has-submenu {
+    position: relative;
+}
+
+nav .has-submenu:hover .submenu {
+    display: block;
+}
+
+nav .has-submenu::after {
+    content: '\00BB';
+    color: white;
+    position: absolute;
+}
+
+nav .submenu {
+    position: absolute;
+    width: 220px;
+    display: none;
+}
+
+nav .submenu a {
+    background: rgba(190, 0, 0, .1);
+    padding: 10px 20px;
+}
+
+nav .submenu a:hover {
+    background: black;
 }
