--- a/Dunai Krisztián/Flexbox_nyers/css/style.css
+++ b/Dunai Krisztián/Flexbox_nyers/css/style.css
@@ -15,6 +15,18 @@ a {
 	color: #354052
 }
 
+h1 {
+	font-family: "Lobster";
+	text-align: center;
+	font-size: 70px;
+	border-top: 2px dashed rgba(0, 0, 0, 0.2);
+	border-bottom: 2px dashed rgba(0, 0, 0, 0.2);
+	padding: 20px 0;
+	margin: 40px 0;
+	background: rgba(255, 255, 255, 0.8);
+	color: #76b332;
+}
+
 .wrapper {
 	max-width: 1200px;
 	margin: 0 auto;
@@ -32,6 +44,7 @@ nav{
 
 main{
 	flex-basis: 60vw;
+	margin: 0 20px;
 }
 
 aside{
@@ -71,8 +84,43 @@ margin: 0 10px 20px 10px;
 .recipes{
 	display: flex;
 	flex-wrap: wrap;
+	margin: 0 -10px;
 	}
 
 img{
 	max-width: 100%;
+}
+
+aside ul{
+	list-style: none;
+	margin: 0;
+	padding: 0;
+}
+
+aside a{
+	display: block;
+	color: #354052;
+	font-size: 14px;
+	text-decoration: none;
+	line-height: 20px;
+}
+
+aside a:hover{
+	text-decoration: underline;
+}
+
+aside li{
+	padding: 15px 0;
+	border-bottom: 1px dashed rgba(0, 0, 0, 0.2);
+}
+
+.recipes-box h2{
+	font-size: 18px;
+	padding: 10px 20px 0 20px;
+	
+	}
+
+.recipes-box p{
+	margin: 0;	
+	padding: 10px 20px;
 }
